# yt-mcp

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  yt-mcp-example.ipynb
resources/: videos.csv
